Reverting background changes

--- a/src/components/ui/FbModalForm/index.scss
+++ b/src/components/ui/FbModalForm/index.scss
@@ -13,6 +13,7 @@
     left: 0;
     right: 0;
     bottom: 0;
+    background-color: $result-background-color;
     display: flex;
     flex-direction: row;
     align-items: center;
