--- a/src/components/ui/FbModalWindow/index.scss
+++ b/src/components/ui/FbModalWindow/index.scss
@@ -74,6 +74,27 @@
         }
       }
     }
+
+    &[data-variant="tablet"] {
+      .fb-ui-modal-window {
+        &__window {
+          padding-top: 1rem;
+          padding-bottom: 1rem;
+        }
+
+        &__dialog {
+          height: 100%;
+        }
+
+        &__content {
+          height: 100%;
+        }
+
+        &__body {
+          padding: 1.5rem 0.5rem;
+        }
+      }
+    }
   }
 
   &__window {
