--- a/src/components/ui/FbModalWindow/index.scss
+++ b/src/components/ui/FbModalWindow/index.scss
@@ -80,6 +80,7 @@
         &__window {
           padding-top: 1rem;
           padding-bottom: 1rem;
+          height: 100%;
         }
 
         &__dialog {
