Defining modal max height

--- a/src/assets/components/ui/fb-modal.scss
+++ b/src/assets/components/ui/fb-modal.scss
@@ -26,6 +26,7 @@ $content-border-radius:               4px;
 $content-background-color:            #fff;
 
 $modal-top-offset:                    7rem;
+$modal-bottom-offset:                 7rem;
 
 $modal-size-sm:                       30rem;
 $modal-size-md:                       60rem;
