--- a/src/components/ui/FbModalWindow/index.scss
+++ b/src/components/ui/FbModalWindow/index.scss
@@ -7,8 +7,6 @@
     left: 0;
     right: 0;
     bottom: 0;
-    width: 100%;
-    height: 100%;
     background-color: $overlay-background;
     transition: opacity .3s ease;
     z-index: $z-index;
@@ -103,13 +101,15 @@
     margin-right: auto;
     padding-top: $modal-top-offset;
     padding-bottom: $modal-bottom-offset;
+    height: 100%;
+    overflow: hidden;
     z-index: ($z-index + 1);
   }
 
   &__dialog {
     position: relative;
     width: auto;
-    max-height: 100%;
+    height: 100%;
   }
 
   &__content {
@@ -120,6 +120,8 @@
     overflow: hidden;
     outline: 0;
     max-height: 100%;
+    display: flex;
+    flex-direction: column;
 
     @include content-shadow;
   }
