--- a/src/assets/components/ui/fb-modal.scss
+++ b/src/assets/components/ui/fb-modal.scss
@@ -17,7 +17,7 @@ $header-close-color:                  #000;
 $header-close-shadow:                 0 1px 0 #fff;
 $header-button-font-size:             1.4rem;
 
-$footer-padding:                      0 1.5rem 1.5rem 1.5rem;
+$footer-padding:                      1.5rem 1.5rem 1.5rem 1.5rem;
 
 $loader-width:                        25rem;
 $loader-background-color:             #fff;
