--- a/src/assets/components/layout/fb-content.scss
+++ b/src/assets/components/layout/fb-content.scss
@@ -1,5 +1,7 @@
 @import "../../mixins/utilities";
 
+$z-index:                             1030 !default;
+
 @mixin flex-content {
   @include flexColumn
 }
