--- a/src/components/ui/FbModalWindow/index.scss
+++ b/src/components/ui/FbModalWindow/index.scss
@@ -68,7 +68,7 @@
         }
 
         &__body {
-          padding: 1.5rem 0.5rem;
+          padding: 1rem;
         }
       }
     }
@@ -90,7 +90,7 @@
         }
 
         &__body {
-          padding: 1.5rem 0.5rem;
+          padding: 1rem;
         }
       }
     }
