Fixing select size

--- a/src/components/forms/FbField/index.scss
+++ b/src/components/forms/FbField/index.scss
@@ -113,8 +113,8 @@
       }
 
       select {
-        height: $field-size-lg-height;
-        line-height: $field-size-lg-height;
+        height: $field-size-md-height;
+        line-height: $field-size-md-height;
       }
 
       textarea,
