Added missing vars

--- a/src/assets/variables/colors.scss
+++ b/src/assets/variables/colors.scss
@@ -10,9 +10,13 @@ $gray-lighter:                          #ddd;
 $brand-primary:                         #d9230f;
 $brand-primary-contrast:                #ffffff;
 $brand-success:                         #469408;
+$brand-success-contrast:                #ffffff;
 $brand-info:                            #029acf;
+$brand-info-contrast:                   #ffffff;
 $brand-warning:                         #9b479f;
+$brand-warning-contrast:                #ffffff;
 $brand-danger:                          #d9831f;
+$brand-danger-contrast:                 #ffffff;
 
 //** Background color for '<body>'.
 $body-bg:                               #fcfcfc;
