--- a/src/assets/variables/texts.scss
+++ b/src/assets/variables/texts.scss
@@ -5,16 +5,16 @@ $font-family-serif:                     Georgia, "Times New Roman", Times, serif
 $font-family-monospace:                 Menlo, Monaco, Consolas, "Courier New", monospace;
 $font-family-base:                      $font-family-sans-serif;
 
-$font-size-base:                        13px;
-$font-size-large:                       18px;
-$font-size-small:                       12px;
+$font-size-base:                        1.3rem;
+$font-size-large:                       1.8rem;
+$font-size-small:                       1.2rem;
 
 $font-weight-light:                     300 !default;
 $font-weight-normal:                    400 !default;
 $font-weight-bold:                      700 !default;
 
 //** Unit-less 'line-height' for use in components like buttons.
-$line-height-base:                      20px / $font-size-base;
+$line-height-base:                      2rem / $font-size-base;
 
 //** Computed "line-height" ('font-size' * 'line-height') for use with 'margin', 'padding', etc.
 $line-height-computed:                  floor(($font-size-base * $line-height-base)); // ~20px
