--- a/src/components/ui/FbItemsContainer/index.scss
+++ b/src/components/ui/FbItemsContainer/index.scss
@@ -19,9 +19,11 @@
   &__heading {
     padding: $heading-padding;
 
-    -webkit-box-flex: 0;
-    -ms-flex: 4 0 0;
-    flex: 4 0 0;
+    @media (min-width: $screen-tablet-min) {
+      -webkit-box-flex: 0;
+      -ms-flex: 4 0 0;
+      flex: 4 0 0;
+    }
 
     h3 {
       margin: 0;
