--- a/src/assets/components/ui/fb-button.scss
+++ b/src/assets/components/ui/fb-button.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @import "../../../assets/mixins/utilities";
 
 $btn-font-weight:                     normal;
@@ -58,9 +60,9 @@ $btn-thick-border-width:              2px !default;
 $btn-thick-font-weight:               600 !default;
 
 $btn-expander-font-size:              12px !default;
-$btn-expander-line-height:            ceil($btn-expander-font-size / 2) !default;
+$btn-expander-line-height:            ceil(math.div($btn-expander-font-size, 2)) !default;
 
-$btn-badge-height-half:               ceil(sum(2px, 2px * 2, 11px) / 2) !default;
+$btn-badge-height-half:               ceil(math.div(sum(2px, 2px * 2, 11px), 2)) !default;
 
 $btn-font-size-xs:                    1.2rem;
 $btn-font-size-sm:                    1.3rem;
