--- a/src/assets/theme.scss
+++ b/src/assets/theme.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @import "./variables/colors";
 @import "./variables/texts";
 
@@ -54,7 +56,7 @@ h1,
 h2,
 h3 {
   margin-top: $line-height-computed;
-  margin-bottom: ($line-height-computed / 2);
+  margin-bottom: math.div($line-height-computed, 2);
 
   small {
     font-size: 65%;
@@ -63,8 +65,8 @@ h3 {
 h4,
 h5,
 h6 {
-  margin-top: ($line-height-computed / 2);
-  margin-bottom: ($line-height-computed / 2);
+  margin-top: math.div($line-height-computed, 2);
+  margin-bottom: math.div($line-height-computed, 2);
 
   small {
     font-size: 75%;
