--- a/src/assets/components/ui/fb-modal.scss
+++ b/src/assets/components/ui/fb-modal.scss
@@ -1,5 +1,3 @@
-@use "sass:math";
-
 @import "../../../assets/variables/screen";
 @import "../../../assets/mixins/utilities";
 
@@ -11,7 +9,7 @@ $overlay-background-transparent:      rgba(255, 255, 255, .5);
 $color-dark:                          #444;
 $color-primary:                       #d9230f;
 $font-size:                           1.3rem;
-$line-height:                         math.div(2rem, $font-size);
+$line-height:                         (2rem / $font-size);
 
 $header-background-color:             #d9230f;
 $header-color:                        #fff;
