--- a/src/assets/theme.scss
+++ b/src/assets/theme.scss
@@ -1,5 +1,3 @@
-@use "sass:math";
-
 @import "./variables/colors";
 @import "./variables/texts";
 
@@ -56,7 +54,7 @@ h1,
 h2,
 h3 {
   margin-top: $line-height-computed;
-  margin-bottom: math.div($line-height-computed, 2);
+  margin-bottom: ($line-height-computed / 2);
 
   small {
     font-size: 65%;
@@ -65,8 +63,8 @@ h3 {
 h4,
 h5,
 h6 {
-  margin-top: math.div($line-height-computed, 2);
-  margin-bottom: math.div($line-height-computed, 2);
+  margin-top: ($line-height-computed / 2);
+  margin-bottom: ($line-height-computed / 2);
 
   small {
     font-size: 75%;
