--- a/src/assets/variables/texts.scss
+++ b/src/assets/variables/texts.scss
@@ -1,5 +1,3 @@
-@use "sass:math";
-
 $font-family-sans-serif:                "Roboto", sans-serif;
 $font-family-serif:                     Georgia, "Times New Roman", Times, serif;
 
@@ -16,7 +14,7 @@ $font-weight-normal:                    400 !default;
 $font-weight-bold:                      700 !default;
 
 //** Unit-less 'line-height' for use in components like buttons.
-$line-height-base:                      math.div(2rem, $font-size-base);
+$line-height-base:                      (2rem / $font-size-base);
 
 //** Computed "line-height" ('font-size' * 'line-height') for use with 'margin', 'padding', etc.
 $line-height-computed:                  floor(($font-size-base * $line-height-base)); // ~20px
@@ -30,9 +28,9 @@ $headings-font-weight:                  500;
 $headings-line-height:                  1.1;
 $headings-color:                        inherit;
 
-$font-size-h1:                          floor($font-size-large * math.div(6, 3)); // 100% larger
-$font-size-h2:                          floor($font-size-large * math.div(5, 3)); //  66% larger
-$font-size-h3:                          floor($font-size-large * math.div(4, 3)); //  33% larger
+$font-size-h1:                          floor($font-size-large * (6 / 3)); // 100% larger
+$font-size-h2:                          floor($font-size-large * (5 / 3)); //  66% larger
+$font-size-h3:                          floor($font-size-large * (4 / 3)); //  33% larger
 $font-size-h4:                          $font-size-large;
 $font-size-h5:                          $font-size-base;
 $font-size-h6:                          $font-size-small;
