--- a/src/assets/mixins/utilities.scss
+++ b/src/assets/mixins/utilities.scss
@@ -24,6 +24,13 @@
   flex-direction: column;
 }
 
+@mixin flexBoxWidth($width) {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 $width;
+  flex: 0 0 $width;
+  max-width: $width;
+}
+
 @mixin box-shadow($shadow...) {
   -webkit-box-shadow: $shadow; // iOS <4.3 & Android <4.1
   box-shadow: $shadow;
