--- a/src/assets/components/form/fb-field.scss
+++ b/src/assets/components/form/fb-field.scss
@@ -15,6 +15,8 @@ $field-size-sm-line-height:           2.5rem;
 $field-size-sm-height:                2.5rem;
 $field-size-sm-padding:               0 1.5rem;
 $field-size-sm-border-radius:         2px;
+$field-size-sm-feedback-size:         1.3rem;
+$field-size-sm-feedback-top-pos:      0.6rem;
 
 $field-size-md-font-size:             1.5rem;
 $field-size-md-line-height:           3.4rem;
@@ -22,12 +24,16 @@ $field-size-md-height:                3.4rem;
 $field-size-md-padding:               0 1rem;
 $field-size-md-addon-padding:         0 1rem;
 $field-size-md-border-radius:         3px;
+$field-size-md-feedback-size:         1.6rem;
+$field-size-md-feedback-top-pos:      0.9rem;
 
 $field-size-lg-font-size:             2.5rem;
 $field-size-lg-line-height:           4.5rem;
 $field-size-lg-height:                4.5rem;
 $field-size-lg-padding:               0 1.5rem;
 $field-size-lg-border-radius:         4px;
+$field-size-lg-feedback-size:         2.5rem;
+$field-size-lg-feedback-top-pos:      1rem;
 
 $field-addon-background:              #ddd;
 $field-addon-border-color:            #ddd;
