--- a/src/components/ui/FbModalForm/index.scss
+++ b/src/components/ui/FbModalForm/index.scss
@@ -11,6 +11,7 @@
     left: 0;
     right: 0;
     bottom: 0;
+    background-color: $result-background-color;
     display: flex;
     flex-direction: column;
     justify-content: center;
